# gh7.0

./: .gitignore  CLAUDE.md  README.md  SPEC.md  app.py  pyproject.toml  requirements.txt  scratch_nav.py  test_nav.py
.streamlit/: config.toml
pages/: 1_surplus_radar.py  2_harvest_plans.py  3_buyers_and_capacity.py  4_analysis_and_simulation.py
scripts/: initialize_demo.py
src/: analysis_models.py  config.py  enums.py  errors.py  models.py
src/db/: __init__.py  connection.py  schema.py  schema.sql
src/db/repositories/: __init__.py  _utils.py  analysis_repository.py  buyer_repository.py  capacity_repository.py  cooperative_repository.py  demand_repository.py  farmer_repository.py  harvest_repository.py  weather_repository.py  workspace_repository.py
src/i18n/: __init__.py  en.json  id.json  translator.py
src/services/: __init__.py  _timestamps.py  allocation_optimizer.py  analysis_input_service.py  analysis_service.py  buyer_service.py  capacity_service.py  data_version_service.py  greedy_fallback.py  harvest_service.py  radar_service.py  risk_engine.py  scenario_service.py  seed_service.py  workspace_service.py
src/ui/: components.py  formatting.py  messages.py  styles.py  theme.py
tests/: conftest.py
tests/integration/: test_analysis_flow.py  test_workspace_initialization.py
tests/ui/: test_pages_smoke.py
tests/unit/: test_data_version.py  test_decision_core.py  test_models.py  test_operational_services.py  test_repositories.py  test_schema.py  test_seed_service.py  test_translations.py  test_workspace_service.py
